import React from 'react'
import renderer from 'react-test-renderer'

import IFrameControls from '../../../../ObojoboDraft/Chunks/IFrame/controls'

describe('IFrame controls', () => {
	const createComponent = (
		hasNewWindowSrc,
		isZoomAbleToBeReset,
		isUnableToZoomOut,
		unexpand,
		expand,
		zoom,
		reload,
		newWindow
	) => {
		hasNewWindowSrc = Boolean(hasNewWindowSrc)
		isZoomAbleToBeReset = Boolean(isZoomAbleToBeReset)
		isUnableToZoomOut = Boolean(isUnableToZoomOut)
		unexpand = Boolean(unexpand)
		expand = Boolean(expand)
		zoom = Boolean(zoom)
		reload = Boolean(reload)
		hasNewWindowSrc = Boolean(hasNewWindowSrc)

		return renderer.create(
			<IFrameControls
				newWindowSrc={hasNewWindowSrc ? 'mock-new-window-src' : null}
				isZoomAbleToBeReset={isZoomAbleToBeReset}
				isUnableToZoomOut={isUnableToZoomOut}
				controlsOptions={{
					unexpand,
					expand,
					zoom,
					reload,
					newWindow
				}}
			/>
		)
	}

	test('IFrame controls component renders', () => {
		const c = createComponent

		expect(c(0, 0, 0, 0, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 0, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 0, 1, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 0, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 0, 1, 1, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 0, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 0, 1, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 0, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(0, 1, 1, 1, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 0, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 0, 1, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 0, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 0, 1, 1, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 0, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 0, 1, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 0, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 0, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 0, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 0, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 0, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 0, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 0, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 0, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 0, 1, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 1, 0, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 1, 0, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 1, 0, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 1, 0, 1, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 1, 1, 0, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 1, 1, 0, 1).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 1, 1, 1, 0).toJSON()).toMatchSnapshot()
		expect(c(1, 1, 1, 1, 1, 1, 1, 1).toJSON()).toMatchSnapshot()
	})
})
